sites/all/themes/zen_avenue/css/avenueresponsive.css
/* Tablet (Portrait) = Design for a width of 730px
	 Source: http://stackoverflow.com/questions/16704243/best-widths-for-apply-media-queries-for-a-responsive-website-satisfying-portrait
	 and: http://www.javascriptkit.com/dhtmltutors/cssmediaqueries2.shtml
================================================== */

@media screen and (min-device-width: 768px) and (max-device-width: 1024px){

	#main, #header .section, #footer-wrapper-inner {
		margin: 0 auto;
		width: 94%;
	}

}


/* Mobile (Landscape)
================================================== */

@media only screen and (max-width: 1024px) {

	.region-sidebar-first {
	width: 25%;
	}
	
	.front.sidebar-first .region-featured, .front.sidebar-first #main-wrapper, .front.sidebar-first #footer-wrapper {
	width: 75%;
	}

	.region-live {
	width: 67%;
	}

	.front #main .block {
	width: 48%;
	}

}


/* Mobile (Landscape and Portrait)
================================================== */

@media only screen and (max-width: 768px) {

	#header {
		position: relative;
		top: auto;
		left: auto;
		width: 100%;
		z-index: 1;
	}

	#menu-link {
		display: block;
	}

	#main-menu, #block-nice-menus-1, #logo {
		display: none;
	}

	#min-menu, #min-schedule  {
		display: block;
	}

	#main, #header .section, #footer-wrapper-inner, .front.sidebar-first #main {
	margin: 0 auto;
	width: 94% !important;
	}

	/* MAIN */
	#main {
		padding: 0 0 20px; /* Reduce padding now that header is not fixed */
	}

	#footer-nav, .region-footer, .col-01, .col-02, .col-03, #block-menu-menu-footer-menu, .front #main .block, .front #aside , .not-front #aside, .front #content , .not-front #content, #sidebar-first, #sidebar-second, .region-sidebar-first, .front.sidebar-first .region-featured, .front.sidebar-first #main-wrapper, .front.sidebar-first #footer-wrapper, .region-live .block.first, .region-live .block.last {
		float: none;
		margin: 0 auto 1em;
		width: 100%;
		min-height: inherit;
		height: auto;
		padding: 0;
	}

	.region-live, .region-featured #block-block-15 {
		margin: 1em auto;
		width: 92%;
		float: none;
		min-height: inherit;
		height: auto;
		padding: 0;
	}

	.panels-flexible-column {
		padding: 0;
		float: none !important;
		clear: both !important;
		width: 100% !important;
	}

	.front.sidebar-first #header .section {
		padding: 0 15px 0 10px;
	}

	.front.sidebar-first #footer-wrapper {
		margin-bottom: 0;
	}

    .region-sidebar-first {
        left: -100%;
        width: auto;
        height: 3000px;
        z-index: 100;
        -webkit-transition: left .3s ease-out;
        -moz-transition: left .3s ease-out;
        -ms-transition: left .3s ease-out;
        -o-transition: left .3s ease-out;
        transition: left .3s ease-out;
    }

    .scheduleslide .region-sidebar-first {
        left: 0;
	}

    .region-sidebar-first h2.block-title {
        padding: 0 0 16px;
        font-size: 13px;
    }

    .region-sidebar-first h3 {
        margin: 0 0 24px;
    }

	.region-sidebar-first .block:hover {
		background: none;
	}
	
	.region-sidebar-first h2.block-title {
		color: inherit;
	}

	#main .block {
	padding: 15px !important;
	margin-bottom: 30px !important;
	}

	.region-featured {
		margin: 0;
	}

	#main-wrapper {
		width: 100%;
		margin: 10px auto;
		padding: 0;
	}

	.not-front #main, .maintenance-page #main {
		padding: 20px 0;
	}

	#main h1.title {
		font-size: 32px;
	}

	#main h1.title, #main h2.node-title, #main h2.block-title, #main h2.title, #main h2.comment-form, #main h3.title {
		margin: 0 0 20px;
	}

	.region-footer, #footer-nav {
		text-align: center;
	}

	.region-featured .welcome {
		top: 20px;
		left: 10%;
		width: 80%
	}

	h2.welcome-title, h3.welcome-title {
		font-size: 30px;
		margin-top: 0;
	}
	
	h3.welcome-title {
		margin-bottom: 2px;
	}
	
	#block-views-sponsors-block .views-row, .view-sponsors .views-row {
		width: 50%;
	}
	
	#block-block-6 .content {
		font-size: 18px;
	}

	table {
		font-size: 0.8em;
	}
	
	.view-home .views-row {
		float: none;
		margin: 30px 0;
		width: 100%;
		max-width: 100%;
		height: auto;
	}

	.views-table .views-field-field-profile-interests {
		display: none;
	}
	
	.views-table th, .views-table td {
		padding: 5px;
	}
	
	#footer-wrapper ul.menu li {
		float: none;
		margin: 5px;
		display: inline-block;
		padding: 5px;
	}
	
	.footer-copy {
		text-align: center;
	}
	
	#footer-nav #main-menu li a, #footer-wrapper ul.menu a {
		padding: 0;
		margin: 0;
	}
	
	.section-sponsor #content {
		overflow-x: scroll;
	}

	#block-block-11 p, .region-sidebar-first h2, .region-sidebar-first h2.block-title, .region-sidebar-first div.view-header h2 a {
		color: inherit;
	}
	
	#block-system-user-menu {
		position: relative;
		top: auto;
		right: auto;
		font-size: 0.9em;
		z-index: 10;
		text-align: center;
	}

	#block-system-user-menu ul.menu li {
		float: none;
		display: inline-block;
	}
	
	.view-nyccamp-schedule .view-grouping-content > h3 {
		width: 100%;
		font-weight: bold;
	}

	.view-nyccamp-schedule .view-grouping-content > table.views-view-grid {
		width: 90%;
		margin-left: 5%;
	}

	.view-nyccamp-schedule .view-grouping-content td, .view-sessions td {
		width: 100%;
		display: block;
		float: left;
	}
	
	.view-sessions .views-field-body p {
		margin: 0;
	}
	
	.view-sessions thead {
		display: none;
	}
	
	.not-front .region-featured {
		margin-bottom: 0;
	}
	
	.not-front #block-system-user-menu {
		margin-top: 0;
		width: 94%;
	}
	
	#aside .block-block p {
		padding: 0 10px;
	}
	
	.field-name-field-page-image, .field-name-field-intro-image {
		width: 100%;
		height: auto;
	}
	
	.field-name-field-page-image, .field-name-field-intro-image {
		float: none;
		width: 100%;
		margin: 10px auto 20px;
	}

	#user-profile-form .vertical-tabs ul.vertical-tabs-list, #user-register-form .vertical-tabs ul.vertical-tabs-list {
		width: 100% !important;
		float: none !important;
	}

	#user-profile-form .vertical-tabs fieldset, #user-register-form .vertical-tabs fieldset {
		padding: 0 !important;
		border: 0 !important;
		max-width: 100% !important;
		float: right !important;
		margin: 0.5em 0 !important;
	}

}



/* Mobile (Landscape)
================================================== */

    /* Note: Design for a width of 480px */

@media only screen and (min-width: 480px) and (max-width: 767px) {

}


/* Mobile -- Front page temp only
================================================== */
@media only screen and (max-width: 480px) {
  .volunteer {
		margin-top: .5em;
		padding: .35em .5em;
		font-size: 95%;
		font-weight: normal;
	}
}

@media only screen and (max-width: 360px) {
	.region-featured .welcome {
		width: 100%;
		left: 0;
	}

	.volunteer {
		margin: .5em;
	}
}

